# tronmoi

./: CMakeLists.txt  README.md  README_ES.md
packaging/deb/: desktop_file.in
project/: tronmoi.pro
src/: Nucleo.cpp  cMenu.cpp  game_grid.cpp  game_grid.hpp  main.cpp  tronmoi.cpp  tronmoi.hpp
